# localisation_confidence_estimator

./: CMakeLists.txt  confidence_estimator.py  package.xml
launch/: localisation_confidence_estimator.launch
